--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ check-for-dupes.bat
 config-GITHUB.txt
 config-DEV.txt
 _REVERSE-RENAME-UNIFORM-PARTS.sh
+YOUR_TEXTURES_HERE-DEV
 
 ############################################
 # Global across projects system files, etc. 
